updated navbar links

--- a/about.html
+++ b/about.html
@@ -1,66 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- Add Your favicon here -->
-    <!--<link rel="icon" href="img/favicon.ico">-->
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <!-- Add Your favicon here -->
+        <!--<link rel="icon" href="img/favicon.ico">-->
 
 
-    <title>Welcome to SolveSpark</title>
+        <title>SolveSpark - Let's crowd-solve it all!</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Animation CSS -->
-    <link href="css/animate.min.css" rel="stylesheet">
+        <!-- Animation CSS -->
+        <link href="css/animate.min.css" rel="stylesheet">
 
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="css/style.css" rel="stylesheet">
 
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-69947100-1', 'auto');
-  ga('send', 'pageview');
+      ga('create', 'UA-69947100-1', 'auto');
+      ga('send', 'pageview');
 
-</script>
+    </script>
 
-</head>
-<body id="page-top">
-
-</div>
-<div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <div class="container">
-                <div class="carousel-caption blank">
-                    <h1>SolveSpark</h1>
-                    <h3>...together, we will <i>crowd-solve</i> the world's problems</h3>
-                    <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
-                </div>
+    </head>
+    <body id="page-top">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="navbar navbar-default navbar-fixed-top">
+          <div class="container-fluid">
+           <div class="navbar-header">
+            <div class="navbar-collapse collapse" id="navbar-main">
+              <ul class="nav navbar-nav">
+                <li><a class="page-scroll" href="http://solvespark.com" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com/about.html">Vision</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com/demo.html">Demo</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com/#timeline">3 Month Timeline</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com/#contact">Contact</a></li>
+              </ul>
             </div>
-            <!-- Set background for slide in css -->
-            <div class="header-back two"></div>
-        </div>        
+          </div>
         </div>
     </div>
-</div>
+        </nav>
+
+
+    <div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <div class="container">
+                    <div class="carousel-caption blank">
+                        <h2>Together, we will <b>crowd-solve</b> the world's <i>toughest</i> problems</h2>
+
+                        <p><a class="btn btn-lg btn-primary" href="#about" role="button">Learn more</a></p>
+                    </div>
+                </div>
+                <!-- Set background for slide in css -->
+                <div class="header-back two"></div>
+            </div>
+        </div>
+    </div>
+
 
 <section id="page-top" class="container services">
     <div class="row">
