--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
            <div class="navbar-header">
             <div class="navbar-collapse collapse" id="navbar-main">
               <ul class="nav navbar-nav">
-                <li><a class="page-scroll" href="#page-top" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
+                <li><a class="page-scroll" href="http://www.solvespark.com" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
                 <li><a class="page-scroll" href="about.html">Vision</a></li>
-                <li><a class="page-scroll" href="#demo.html">Demo</a></li>
+                <li><a class="page-scroll" href="demo.html">Demo</a></li>
                 <li><a class="page-scroll" href="#timeline">3 Month Timeline</a></li>
                 <li><a class="page-scroll" href="#contact">Contact</a></li>
               </ul>
