--- a/demo.html
+++ b/demo.html
@@ -43,11 +43,11 @@
            <div class="navbar-header">
             <div class="navbar-collapse collapse" id="navbar-main">
               <ul class="nav navbar-nav">
-                <li><a class="page-scroll" href="#page-top" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
-                <li><a class="page-scroll" href="about.html">Vision</a></li>
-                <li><a class="page-scroll" href="#demo.html">Demo</a></li>
-                <li><a class="page-scroll" href="#timeline">3 Month Timeline</a></li>
-                <li><a class="page-scroll" href="#contact">Contact</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com/about.html">Vision</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com/demo.html">Demo</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com/#timeline">3 Month Timeline</a></li>
+                <li><a class="page-scroll" href="http://solvespark.com/#contact">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -62,8 +62,6 @@
                 <div class="container">
                     <div class="carousel-caption blank">
                         <h2>Together, we will <b>crowd-solve</b> the world's <i>toughest</i> problems</h2>
-
-                        <p><a class="btn btn-lg btn-primary" href="#about" role="button">Learn more</a></p>
                     </div>
                 </div>
                 <!-- Set background for slide in css -->
@@ -72,7 +70,9 @@
         </div>
     </div>
 
-<section id="submit" class="container services">
+
+ 
+<section id="main" class="container services">
     <div class="row">
         <div class="col-lg-12 text-center">
 <h1>
