--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                     <div class="carousel-caption blank">
                         <h2>Together, we will <b>crowd-solve</b> the world's <i>toughest</i> problems</h2>
 
-                        <p><a class="btn btn-lg btn-primary" href="#about" role="button">Learn more</a></p>
+                       <!-- <p><a class="btn btn-lg btn-primary" href="#about" role="button">Learn more</a></p> -->
                     </div>
                 </div>
                 <!-- Set background for slide in css -->
@@ -82,22 +82,22 @@
 <div class="row">
 <h2>What is SolveSpark?</h2>
 <p>
-SolveSpark will be a social platform that welcomes all people (regardless of race, gender, age, nationality, religion, creed, class, privilege, etc.) to post and discuss any kind of problem or idea. Topics discussed will typically range from problems affecting a particular community up to problems of a global scale.
+  SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere the lunches served at the school cafeteria are  all the way up to "how can we solve world hunger?".  Traditionally, only the powerful got to solve these problems.  Now everyone can play a part.
 </p><p>
-This platform will utilize intuitive analytics and will seamlessly integrate simple project management-based tools to help users define the problem, dig to its root cause, and find the best solutions. This will enable users to "crowd-solve" problems together in a methodical, comprehensive, and transparent manner.
+SolveSpark will feature robust and intuitive data analytics that will seamlessly integrate simple problem-solving tools to help users define the problem, dig to its root cause, define requirements, compare alternatives, and ultimately, find the best solution. This will enable users to "crowd-solve" problems together in a methodical, comprehensive, and transparent manner.
 </p><p>
-SolveSpark's data analytics will undergo continuous improvement to derive meaning from user feedback and optimize problem solving guidance. Analytics will help users identify vulnerabilities, such as risks, information gaps, and flaws in reasoning such as group-think and biases. The underlying algorithms will be publicly available to foster transparency and continuous improvement. The interface will remain simple, yet customizable to reach the broadest audiences and maximize potential.
+SolveSpark's data analytics will undergo continuous improvement to derive meaning from user feedback and optimize problem-solving guidance. Analytics will help users identify vulnerabilities, such as risks, information gaps, and flaws in reasoning such as group-think and biases. The underlying algorithms will be publicly available to foster transparency and continuous improvement. The interface will remain simple, yet customizable to reach the broadest audiences and maximize potential.
 </p><p>
-SolveSpark's goal is to include the entire world; the more input we gather, the better our solutions will be. Every day, people have valuable insights into problems and potential solutions. Currently, there are few ways to effectively cultivate these thoughts before they are quickly forgotten.
+SolveSpark's goal is to include the entire world.  We believe that everyone's insights and ideas are valuable, regardless of their race, gender, age, nationality, religion, creed, class, privilege, and even IQ.  The more input we gather, the better our solutions will be.  SolveSpark wants to be there to capture people's thoughts as soon as the moment of brilliance strikes, before the idea disipates into the ether, never to be seen again.
 </p><p>
-SolveSpark will capture these precious day-to-day insights and give people a voice. Cumulatively, these insights will not only spark countless revelations, but inspire a philosophy of positivity, transparency, and empowerment by showing people that together, we will solve the world's toughest challenges.
+SolveSpark will give people a voice; not just a voice to those who are used to speaking out, but those who are often underrepresented, like young boys and girls in Afghanistan. Cumulatively, these insights will not only spark countless revelations, but inspire a philosophy of positivity, transparency, and empowerment by showing people that together, we will solve the world's toughest challenges.
 </p>
 </div>
 
 <div class="row">
 <h2>What was the inspiration behind SolveSpark?</h2>
 <p>
-  In 2011, I felt an air of discontent across America. It felt as if people had expected one person to magically fix the whole world. I, too, was upset-- upset at <i>America</i>.  "We need to fix our own problems in our own communities! Why can't people realize this?" I puzzled, while on my nightly walk. I felt so empowered by the problem-solving techniques I was learning in my Systems Engineering classes--how could I share this?  As soon as the lightbulb lit up, I could not let go of idea--the idea that would empower the world. Humanity is ready.
+  Back in 2011, I was out for a nightly walk and was thinking about current events.  I felt an air of discontent across America. It felt as if people were blaming the president for not having fixed all of their problems.  I was so frustrated-- I wanted to tell people that one person cannot magically fix the whole world.  We have to get up off the couch and fix things in our own communitites.  I reflected on the systems engineering classes I was taking.  I was learning project management concepts that could teach anyone how to effectively solve any problem.  It was so empowering.  I wanted to find a way to share this with the world.  And as soon as I had the idea, I knew that I could not let it go.  It will be the idea that empowers the world.  Humantiy is ready.
 </p>
 </div>
 
@@ -159,7 +159,7 @@ If these revenue streams prove insufficient, SolveSpark may sell ad space. The c
 <p>
 SolveSpark will challenge users to think critically before arriving at a solution. Many sites promote doing great things, but SolveSpark promotes doing great things responsibly by engaging all stakeholders, defining the problem, outlining requirements, assessing risks, and comparing top solutions.
 </p><p>
-It excites me greatly that there are a growing number of amazing sites geared towards growing ideas (such as ThinkItUp and IdeaScale), project management services (such as BaseCamp and Pivotal), and crowdfunding sites. Although these sites can be seen as competition, I choose to see them as inspiration, and even potential partners. SolveSpark will close a gap in the problem-solving process and complement existing services. Partnering with other services would potentially create force multipliers, advancing every cause. 
+It excites me greatly that there are a growing number of amazing sites geared towards growing ideas (such as ThinkItUp, IdeaScale, and Innocentive), project management services (such as BaseCamp and Pivotal), and crowdfunding sites. Although these sites can be seen as competition, I choose to see them as inspiration, and even potential partners. SolveSpark will close a gap in the problem-solving process and complement existing services. Partnering with other services would potentially create force multipliers, advancing every cause. 
 </p>
 </div>
 
@@ -190,33 +190,89 @@ SolveSpark also seeks to preserve freedom of speech and will explore creating an
 </div>
 
 <div class="row">
-<h2>What are the biggest challenges SolveSpark will face in the next year?</h2>
+<h2>s Founding Principles</h2>
 <p>
-SolveSpark's biggest challenges in the near future are getting established and laying basic infrastructure. Finding a co-founder and/or CTO will be immensely helpful. The ideal co-founder would keep momentum going, increase accountability, and balance my weaknesses. The ideal CTO would help drive the development of a robust, secure, and yet flexible platform.
+SolveSpark will be publicly available for anyone to access.  The qualities that the website will strive to wholly support are universality, transparency, truth, freedom of speech, positivity, and ease of use.
 </p><p>
-Creating a basic website would allow users to start testing it and providing valuable feedback. This would launch SolveSpark onto a path of continuous improvement.
+SolveSpark strives to include all people and thus, in design, will do its best to ensure that it is easy to use for people of all ages and education levels.
 </p><p>
-Challenges also include researching and seeking advice in:
-<ul>
-<li>Legal matters</li>
-<li>Intellectual property</li>
-<li>Finance</li>
-<li>Business</li>
-<li>Security</li>
-<li>Data science</li>
-</ul>
+It is s policy to ensure that positive progress is made.  Hateful and destructive messages with no merit are not permitted.  SolveSpark will use a combination of user flagging, moderation, and analytics to enforce this policy and prevent the spread of hatred.
+</p><p>
+Any solution that involves any harm to humans in the short term or long term is not a solution.  There will be cases where we are not ready for a valid solution because the technology may not yet exist or society is not prepared; and that is acceptable.  However, this site will also encourage various types of solutions that can be temporary to help mitigate other problems in preparation for a real, long-term solution.
+</p>
+</div>
+<div class="row">
+<h2>Freedom of Speech and Anonymity</h2>
+<p>
+SolveSpark aims to uphold freedom of speech worldwide and protect users from retaliation or other consequences.  Users will be able to browse and post under an anonymous account that masks such identifying information as IP address, MAC address, and E-mail address from the public.
+</p><p>
+    A limit of one or two anonymous usernames can be added to each account.  The user may select from a list of system-generated usernames, containing the .
+</p><p>
+Because E-mail addresses can be used to identify individuals, we will mask this information from the public and encrypt the E-mail address in storage to protect  identities in the event of a leak.
+</p><p>
+SolveSpark will need to explore the possibility of users using anonymous accounts for fraud.  In the event that anonymous user input plays a major factor, some additional vetting may need to be performed to make the input count. 
 </p>
 </div>
 
 <div class="row">
-<h2>What does success look like for SolveSpark?</h2>
+<h2>Usability</h2>
 <p>
-   Success occurs every time a person voices their opinion, every time people work together, every time a problem is solved, and even when people discover that their solution will fail. No effort will ever go to waste; it will forever be here to teach valuable lessons.
+Simplicity keyusersanonymousword iswith the fast pace of life it takes time, courage, initiative, and frankly, a good memory, to post problems or ideas on a site.  Today, smartphone users have an extremely short attention span.  Google made it quick, easy, and convenient to do research.  Facebook did the same thing for posting updates to a personal page.  SolveSpark will strive to do the same by minimizing the complexities of logging a problem or idea.  
 </p><p>
-SolveSpark's first milestone is attaining 10,000 users. Next, attaining 10,000 faithful users, and so on. Financially, success involves enrolling several eager organizations for subscriptions.
+Posting a problem or idea will not require a login.  One can still track the progress with the URL the system provides or a unique tracking number.  Posts made by users who have not logged in, will undergo more scrutiny to ensure that the content is not spam.  
 </p><p>
-This path of continuous improvement and the challenge of always building a bigger, better platform to better serve the world is extremely exciting. The hard work is always worth it.
+Users who create an account and log in will be able to set preferences, such as following specific topics, search through their user history, and engage more in communities.
+</p><p>
+    The interface will remain simple to reach the broadest audience.  However, there will be a vast array of intuitive tools available for users who want to drive deeper.  Users can further explore additional tools based on different customizable dashboard types.  SolveSpark will feature decision-s  that presents facts, figures, and a host of statistical analysis and forecasting tools for authorities that must make the tough decisions.
 </p>
+</div>
+
+<div class="row">
+<h2>Transparency vs. masking data</h2>
+<p>
+SolveSpark aims to be 100% transparent, however, will mask offensive content to protect minors as well as hateful content deemed meritless or destructive from public view to mitigate the spread of hateful and destructive messages.  Masked content may still be viewed by users over the age of 18 if they decide to click the appropriate option.  All content will be retained in the event that the information becomes important in decision-making, research, or federal investigations.
+</p><p>
+s analytics may produce a legitimacy rating for each problem-solution pair calculated based on a number of factors.  Problem-solution pairs with low legitimacy ratings should not be executed.
+</p>
+</div>
+
+<div class="row">
+<h2>Example use case <p>
+There are plenty of places on the Internet where people can vent their frustrations.  Additionally, there are now a lot of wonderful places where the highly motivated can take their ideas and turn them into something great.
+</p><p>
+But what about all of those valuable insights that people have on a daily basis that never amount to anything, because there is nowhere to put them?
+</p><p>
+SolveSpark will be as easy to use as entering your thoughts into your device and clicking submit.  A good way to pass the time while sitting in traffic or on metro may be to whip your smartphone out and post your thoughts, then see moments later that several other people are chiming in and giving constructive feedback. 
+</p><p>
+By the end of the day, there may be a viable solution that can be implemented.  You, and everyone else who participated just solved a problem.
+</p><p>
+SolveSpark will not only provide a place where people can easily vent their frustrations; and it will be more than the average idea-oriented site that implicitly only asks for s participation.  SolveSpark will capture valuable day-to-day insights from people all around the world.  
+</p>
+</div>
+
+<div class="row">
+<h2>User types</h2>
+<p>
+<o>
+<li><b>Unauthenticated user</b> </li>
+<li>
+<b>Registered account</b<p>
+</p>
+Additionally, any assumptions and presumed facts that have the potential influence outcomes must be supported by credible evidence.  SolveSpark will be strive to ensure that tough questions are addressed.  (For example, many structures such as bridges and levies fail in extreme weather.  When these structures were designed, it was assumed that such weather conditions would not occur). 
+</p>
+
+<div class="row">
+<h2>Integrating with other apps</h2>
+<p>
+SolveSpark will do its best to integrate with the top social media apps as well as crowdfunding, and idea services to maximize impact.
+<p>
+</p>
+SolveSpark would also like to partner with services such as Socrata, that makes open government data available to the public.  This information would help users make more informed decisions.
+</p>
+</div>
+
+
+
 <br><br><br><br>
 </div>
 </section>
@@ -272,3 +328,4 @@ This path of continuous improvement and the challenge of always building a bigge
 <script src="js/inspinia.js"></script>
 </body>
 </html>
+ 
