--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 <div class="row">
 <h2>What is SolveSpark?</h2>
 <p>
-  SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere the lunches served at the school cafeteria are  all the way up to "how can we solve world hunger?".  Traditionally, only the powerful got to solve these problems.  Now everyone can play a part.
+  SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere the lunches served at the school cafeteria are  all the way up to \"how can we solve world hunger?\".  Traditionally, only the powerful got to solve these problems.  Now everyone can play a part.
 </p><p>
 SolveSpark will feature robust and intuitive data analytics that will seamlessly integrate simple problem-solving tools to help users define the problem, dig to its root cause, define requirements, compare alternatives, and ultimately, find the best solution. This will enable users to "crowd-solve" problems together in a methodical, comprehensive, and transparent manner.
 </p><p>
@@ -190,13 +190,13 @@ SolveSpark also seeks to preserve freedom of speech and will explore creating an
 </div>
 
 <div class="row">
-<h2>s Founding Principles</h2>
+<h2>SolveSpark's Founding Principles</h2>
 <p>
 SolveSpark will be publicly available for anyone to access.  The qualities that the website will strive to wholly support are universality, transparency, truth, freedom of speech, positivity, and ease of use.
 </p><p>
 SolveSpark strives to include all people and thus, in design, will do its best to ensure that it is easy to use for people of all ages and education levels.
 </p><p>
-It is s policy to ensure that positive progress is made.  Hateful and destructive messages with no merit are not permitted.  SolveSpark will use a combination of user flagging, moderation, and analytics to enforce this policy and prevent the spread of hatred.
+It is SolveSpark's policy to ensure that positive progress is made.  Hateful and destructive messages with no merit are not permitted.  SolveSpark will use a combination of user flagging, moderation, and analytics to enforce this policy and prevent the spread of hatred.
 </p><p>
 Any solution that involves any harm to humans in the short term or long term is not a solution.  There will be cases where we are not ready for a valid solution because the technology may not yet exist or society is not prepared; and that is acceptable.  However, this site will also encourage various types of solutions that can be temporary to help mitigate other problems in preparation for a real, long-term solution.
 </p>
@@ -208,7 +208,7 @@ SolveSpark aims to uphold freedom of speech worldwide and protect users from ret
 </p><p>
     A limit of one or two anonymous usernames can be added to each account.  The user may select from a list of system-generated usernames, containing the .
 </p><p>
-Because E-mail addresses can be used to identify individuals, we will mask this information from the public and encrypt the E-mail address in storage to protect  identities in the event of a leak.
+Because E-mail addresses can be used to identify individuals, we will mask this information from the public and encrypt the E-mail address in storage to protect users' identities in the event of a leak.
 </p><p>
 SolveSpark will need to explore the possibility of users using anonymous accounts for fraud.  In the event that anonymous user input plays a major factor, some additional vetting may need to be performed to make the input count. 
 </p>
@@ -217,13 +217,13 @@ SolveSpark will need to explore the possibility of users using anonymous account
 <div class="row">
 <h2>Usability</h2>
 <p>
-Simplicity keyusersanonymousword iswith the fast pace of life it takes time, courage, initiative, and frankly, a good memory, to post problems or ideas on a site.  Today, smartphone users have an extremely short attention span.  Google made it quick, easy, and convenient to do research.  Facebook did the same thing for posting updates to a personal page.  SolveSpark will strive to do the same by minimizing the complexities of logging a problem or idea.  
+Simplicity keyanonymousword iswith the fast pace of life it takes time, courage, initiative, and frankly, a good memory, to post problems or ideas on a site.  Today, smartphone users have an extremely short attention span.  Google made it quick, easy, and convenient to do research.  Facebook did the same thing for posting updates to a personal page.  SolveSpark will strive to do the same by minimizing the complexities of logging a problem or idea.  
 </p><p>
 Posting a problem or idea will not require a login.  One can still track the progress with the URL the system provides or a unique tracking number.  Posts made by users who have not logged in, will undergo more scrutiny to ensure that the content is not spam.  
 </p><p>
 Users who create an account and log in will be able to set preferences, such as following specific topics, search through their user history, and engage more in communities.
 </p><p>
-    The interface will remain simple to reach the broadest audience.  However, there will be a vast array of intuitive tools available for users who want to drive deeper.  Users can further explore additional tools based on different customizable dashboard types.  SolveSpark will feature decision-s  that presents facts, figures, and a host of statistical analysis and forecasting tools for authorities that must make the tough decisions.
+    The interface will remain simple to reach the broadest audience.  However, there will be a vast array of intuitive tools available for users who want to drive deeper.  Users can further explore additional tools based on different customizable dashboard types.  SolveSpark will feature decision-maker's  that presents facts, figures, and a host of statistical analysis and forecasting tools for authorities that must make the tough decisions.
 </p>
 </div>
 
@@ -232,7 +232,7 @@ Users who create an account and log in will be able to set preferences, such as 
 <p>
 SolveSpark aims to be 100% transparent, however, will mask offensive content to protect minors as well as hateful content deemed meritless or destructive from public view to mitigate the spread of hateful and destructive messages.  Masked content may still be viewed by users over the age of 18 if they decide to click the appropriate option.  All content will be retained in the event that the information becomes important in decision-making, research, or federal investigations.
 </p><p>
-s analytics may produce a legitimacy rating for each problem-solution pair calculated based on a number of factors.  Problem-solution pairs with low legitimacy ratings should not be executed.
+SolveSpark's analytics may produce a legitimacy rating for each problem-solution pair calculated based on a number of factors.  Problem-solution pairs with low legitimacy ratings should not be executed.
 </p>
 </div>
 
@@ -246,17 +246,16 @@ SolveSpark will be as easy to use as entering your thoughts into your device and
 </p><p>
 By the end of the day, there may be a viable solution that can be implemented.  You, and everyone else who participated just solved a problem.
 </p><p>
-SolveSpark will not only provide a place where people can easily vent their frustrations; and it will be more than the average idea-oriented site that implicitly only asks for s participation.  SolveSpark will capture valuable day-to-day insights from people all around the world.  
+SolveSpark will not only provide a place where people can easily vent their frustrations; and it will be more than the average idea-oriented site that implicitly only asks for genius's participation.  SolveSpark will capture valuable day-to-day insights from people all around the world.  
 </p>
 </div>
 
 <div class="row">
 <h2>User types</h2>
 <p>
-<o>
-<li><b>Unauthenticated user</b> </li>
-<li>
-<b>Registered account</b<p>
+<ol>
+<li><b>Unauthenticated user</b> interfacea  t</li>
+<li><b>Registered account</b<p>
 </p>
 Additionally, any assumptions and presumed facts that have the potential influence outcomes must be supported by credible evidence.  SolveSpark will be strive to ensure that tough questions are addressed.  (For example, many structures such as bridges and levies fail in extreme weather.  When these structures were designed, it was assumed that such weather conditions would not occur). 
 </p>
@@ -328,4 +327,3 @@ SolveSpark would also like to partner with services such as Socrata, that makes 
 <script src="js/inspinia.js"></script>
 </body>
 </html>
- 
