--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 <div class="row">
 <h2>What is SolveSpark?</h2>
 <p>
-  SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere from <i>the lunches served at the school cafeteria are terrible<\i> all the way up to <i>how can we solve world hunger?<\i>.  Traditionally, only the powerful got to solve these problems.  Now everyone can play a part.
+SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere from, "the lunches served at the school cafeteria are terrible," all the way up to "how can we solve world hunger?".  Traditionally, only the powerful got to solve these problems.  Now everyone can play a part.
 </p><p>
 SolveSpark will feature robust and intuitive data analytics that will seamlessly integrate simple problem-solving tools to help users define the problem, dig to its root cause, define requirements, compare alternatives, and ultimately, find the best solution. This will enable users to "crowd-solve" problems together in a methodical, comprehensive, and transparent manner.
 </p><p>
@@ -253,7 +253,7 @@ SolveSpark will not only provide a place where people can easily vent their frus
 <div class="row">
 <h2>User types</h2>
 <ol type="1">
-    <li><b>Unauthenticated user</b>     <li><b>Registered account</bse of other problems.  The development of simulators will hopefully help mitigate these risks.
+    <li><b>Unauthenticated user</b>     <li><b>Registered account</b hope to capture the relationships between these factors and those of other problems.  The development of simulators will hopefully help mitigate these risks.
 <p>
 </p>
 Additionally, any assumptions and presumed facts that have the potential influence outcomes must be supported by credible evidence.  SolveSpark will be strive to ensure that tough questions are addressed.  (For example, many structures such as bridges and levies fail in extreme weather.  When these structures were designed, it was assumed that such weather conditions would not occur). 
