--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 <div class="row">
 <h2>What is SolveSpark?</h2>
 <p>
-SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere from, "the lunches served at the school cafeteria are terrible," all the way up to "how can we solve world hunger?".  Traditionally, only the powerful got to solve these problems.  Now everyone can play a part.
+SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere from, "the lunches served at the school cafeteria are terrible," all the way up to, "how can we solve world hunger?"  Traditionally, only the powerful got to solve these problems.  Now everyone can play a part.
 </p><p>
 SolveSpark will feature robust and intuitive data analytics that will seamlessly integrate simple problem-solving tools to help users define the problem, dig to its root cause, define requirements, compare alternatives, and ultimately, find the best solution. This will enable users to "crowd-solve" problems together in a methodical, comprehensive, and transparent manner.
 </p><p>
@@ -253,9 +253,15 @@ SolveSpark will not only provide a place where people can easily vent their frus
 <div class="row">
 <h2>User types</h2>
 <ol type="1">
-    <li><b>Unauthenticated user</b>     <li><b>Registered account</b hope to capture the relationships between these factors and those of other problems.  The development of simulators will hopefully help mitigate these risks.
+    <li><b>Unauthenticated user</b>     <li><b>Registered account</b</ol>
+</div>
+
+<div class="row">
+<h2>The Big picture and complexity of data</h2>
 <p>
+Breaking down a problem into its individual components may be simple, but world is complex and made up of a dizzying array of intertwined relationships.  Solving one problem may have unpredictable ripple effects on other problems.  Solving many problems at once may introduce a dangerous amount of complexity and uncertainty to the world.  Part of the project management process involves identifying constraints, assumptions, risks, and other factors attributed to the problem scenario.  With robust analytics we hope to capture the relationships between these factors and those of other problems.  The development of simulators will hopefully help mitigate these risks.
 </p>
+<p>
 Additionally, any assumptions and presumed facts that have the potential influence outcomes must be supported by credible evidence.  SolveSpark will be strive to ensure that tough questions are addressed.  (For example, many structures such as bridges and levies fail in extreme weather.  When these structures were designed, it was assumed that such weather conditions would not occur). 
 </p>
 </div>
@@ -264,8 +270,8 @@ Additionally, any assumptions and presumed facts that have the potential influen
 <h2>Integrating with other apps</h2>
 <p>
 SolveSpark will do its best to integrate with the top social media apps as well as crowdfunding, and idea services to maximize impact.
-<p>
 </p>
+<p>
 SolveSpark would also like to partner with services such as Socrata, that makes open government data available to the public.  This information would help users make more informed decisions.
 </p>
 </div>
@@ -327,3 +333,4 @@ SolveSpark would also like to partner with services such as Socrata, that makes 
 <script src="js/inspinia.js"></script>
 </body>
 </html>
+  
